cleaned up directory added favicon

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -30,7 +30,7 @@
   border-color: red;
 }
 body {
-  background-image: url('school.png');
+  background-image: url('../images/school.png');
 }
 
 input {
