update image size

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -63,9 +63,9 @@ input::-webkit-calendar-picker-indicator {
 
 img {
   position: absolute;
-  top: 0;
-  bottom: 0;
+  bottom: 50px;
   left: 0;
   right: 0;
-  margin: auto;
+  margin: 0px auto;
+  width: 120px;
 }
